--- a/BowlingCoreMVC/Views/Stats/MyStats.cshtml
+++ b/BowlingCoreMVC/Views/Stats/MyStats.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BowlingCoreMVC.Models.StatsViewModel>
 
 @{
-    ViewData["Title"] = "Statistics! Yay!";
+    ViewData["Title"] = "Your Statistics";
 }
 
 <h2>@ViewData["Title"]</h2>
