--- a/BowlingCoreMVC/Views/Shared/_LoginPartial.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_LoginPartial.cshtml
@@ -7,14 +7,32 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="form-inline">
-        <ul class="nav navbar-nav">
+
+        
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello @UserManager.GetUserName(User)!</a>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a asp-action="UserSummary" asp-route-id="@UserManager.GetUserId(User)" class="dropdown-item">Overall Stats</a>
+                    <div class="dropdown-divider"></div>
+                    <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage" class="dropdown-item">Manage Account</a>
+                    <div class="dropdown-divider"></div>
+                    <a asp-area="" asp-controller="Account" asp-action="Logout" class="dropdown-item">Log out</a>
+                </div>
+            </li>
+        </ul>
+
+        @*<ul class="nav navbar-nav">
             <li class="nav-item">
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage" class="nav-link">Hello @UserManager.GetUserName(User)!</a>
             </li>
+
+            <li class="nav-item justify-content-end"><a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">Need Help?</a></li>
+
             <li class="nav-item">
-                <button type="submit" class="nav-link">Log out</button>
+                <a asp-area="" asp-controller="Account" asp-action="Logout" class="nav-link">Log out</a>
             </li>
-        </ul>
+        </ul>*@
     </form>
 }
 else
