4coder setup; League Averages on user summary; scoreboard styling; Series Summary (details); previous button skip strikes; games (series) list shows league name;

--- a/BowlingCoreMVC/Views/Game/Index.cshtml
+++ b/BowlingCoreMVC/Views/Game/Index.cshtml
@@ -35,7 +35,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.SeriesScore)
+                    <a asp-action="Details" asp-controller="Series" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.SeriesScore)</a>
                 </td>
                 <td>
                     @{
