--- a/BowlingCoreMVC/Views/Game/Details.cshtml
+++ b/BowlingCoreMVC/Views/Game/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BowlingCoreMVC.Models.Game
 
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Game Details";
 }
 
 <h2>@ViewData["Title"]</h2>
