--- a/BowlingCoreMVC/wwwroot/css/site.css
+++ b/BowlingCoreMVC/wwwroot/css/site.css
@@ -46,24 +46,28 @@
 }
 
 .scoreboard {
-    border: 2px solid rgba(30, 30, 30, .50);
+    border: 2px solid rgba(59, 55, 46, .50);
 }
 
 .scoreboard-frame {
-    border: 2px solid rgba(30, 30, 30, .50);
+    border: 2px solid rgba(59, 55, 46, .50);
     background-color: rgba(10, 10, 10, .10);
+	min-width: 40px;
 }
 
 .scoreboard-framenum {
-    background-color: rgba(20, 90, 50, .80);
+//    background-color: rgba(20, 90, 50, .80);
     align-items: center;
     justify-content: center;
     color: white;
 }
 
-.scoreboard-box {
-    border-left: 2px solid rgba(0, 50, 30, .75);
+.scoreboard-row {
     border-bottom: 2px solid rgba(0, 50, 30, .75);
+	min-width: 20px;
+	min-height: 38%;
+//	padding-left: 5px;
+//	padding-right: 5px;
 }
 
 .scoreboard-box-10 {
