--- a/BowlingCoreMVC/Views/Account/Login.cshtml
+++ b/BowlingCoreMVC/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
     <div class="col-md-4">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Use a local account to log in.</h4>
+                @*<h4>Use a local account to log in.</h4>*@
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -49,6 +49,7 @@
             </form>
         </section>
     </div>
+    @*
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
@@ -80,6 +81,7 @@
             }
         </section>
     </div>
+    *@
 </div>
 
 @section Scripts {
