--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -81,8 +81,8 @@
                 @*<li class="nav-item"><a asp-area="" asp-controller="Stats" asp-action="Index" class="nav-link">HiScores</a></li>*@
 
                 @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
-                <li class="nav-item"><a asp-area="" asp-controller="Game" asp-action="Index" class="nav-link">Games</a></li>
-                <li class="nav-item"><a asp-area="" asp-controller="Stats" asp-action="MyStats" class="nav-link">Statistics</a></li>
+                <li class="nav-item"><a asp-controller="Game" asp-action="Index" class="nav-link">My Games</a></li>
+                <li class="nav-item"><a asp-controller="Stats" asp-action="MyStats" class="nav-link">My Statistics</a></li>
                 @*<li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Scores<span class="caret"></span></a>
             <div class="dropdown-menu">
@@ -92,6 +92,7 @@
             </div>
         </li>*@
 
+@*
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leagues</a>
                     <div class="dropdown-menu">
@@ -99,6 +100,9 @@
                         <a asp-area="" asp-controller="Locations" asp-action="Index" class="dropdown-item">Locations</a>
                     </div>
                 </li>
+*@
+            <li class="nav-item"><a asp-controller="Leagues" asp-action="Index" class="nav-link">Leagues</a>
+            <li class="nav-item"><a asp-controller="Stats" asp-action="Index" class="nav-link">Sitewide Scores</a>
             </ul>
             
             @await Html.PartialAsync("_LoginPartial")
