--- a/BowlingCoreMVC/Views/Stats/MyStats.cshtml
+++ b/BowlingCoreMVC/Views/Stats/MyStats.cshtml
@@ -10,7 +10,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.StatTitle)
+                Stat
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Conversions)
