--- a/BowlingCoreMVC/Views/Stats/UserSummary.cshtml
+++ b/BowlingCoreMVC/Views/Stats/UserSummary.cshtml
@@ -15,12 +15,66 @@
 
 <hr />
 
+@*
 <div class="row">
     <div class="col-lg-6">
         <h4>Overall Strike Percent: @String.Format("{0:P2}", ViewData["OverallStrikePerc"])</h4>
     </div>
     <div class="col-lg-6">
         <h4>Overall Spare Percent: @String.Format("{0:P2}", ViewData["OverallSparePerc"])</h4>
+    </div>
+</div>
+
+<hr/>
+*@
+
+<div class="row">
+    <div class="col-lg-12">
+        <h4>League Averages</h4>
+        <table class="table table-condensed table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>
+                        League
+                    </th>
+                    <th>
+                        Average
+                    </th>
+                </tr>
+            </thead>
+            @if (((List<League>)ViewData["UsersLeagues"]).Count > 0)
+            {
+                <tbody>
+					@for (var i = 0; i < ((List<League>)ViewData["UsersLeagues"]).Count; i++)
+					{
+						<tr>
+							<td>@Html.DisplayFor(modelItem => ((List<League>)ViewData["UsersLeagues"])[i].Name)
+							</td>
+							<td>@Html.DisplayFor(modelItem => ((List<double>)ViewData["UsersLeaguesAverages"])[i])
+							</td>
+						</tr>
+					}
+@*
+                    @foreach (var ul in ((List<League>)ViewData["UsersLeagues"]))
+                    {
+                        
+                            <td>
+                                @Html.DisplayFor(modelItem => ul.Name)
+                            </td>
+                        </tr>
+                    }
+					@foreach (var ula in ((List<double>)ViewData["UsersLeaguesAverages"]))
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => ula)
+                            </td>
+                        </tr>
+                    }
+*@
+                </tbody>
+            }
+        </table>
     </div>
 </div>
 
@@ -125,6 +179,53 @@
     </div>
 </div>
 
+<hr/>
+
+<div class="row">
+     <div class="col-lg-12">
+          <h4>Statistics</h4>
+          <table class="table table-condensed table-bordered table-striped">
+              <thead>
+                  <tr>
+                      <th>
+                          Stat
+                      </th>
+                      <th>
+                          Conversions
+                      </th>
+                      <th>
+                          Total
+                      </th>
+                      <th>
+                          Percentage
+                      </th>
+                  </tr>
+              </thead>
+              <tbody>
+                  @foreach (var stat in ((List<StatsViewModel>)ViewData["StatsList"]))
+                  {
+                  <tr>
+                  <td>
+                  @Html.DisplayFor(modelItem => stat.StatTitle)
+                  </td>
+                  <td>
+                  @Html.DisplayFor(modelItem => stat.Conversions)
+                  </td>
+                  <td>
+                  @Html.DisplayFor(modelItem => stat.Total)
+                  </td>
+                  <td>
+                  @Html.DisplayFor(modelItem => stat.Percentage)
+                  </td>
+                  </tr>
+                  }
+              </tbody>
+          </table>
+     </div>
+</div>
+
+<hr/>
+
 <div class="row">
     <div class="col-lg-12">
         <h4>Recent Games</h4>
@@ -164,53 +265,3 @@
 
 
 
-
-<div class="row">
-    <div class="col-lg-12">
-        <h4>League Averages</h4>
-        <table class="table table-condensed table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>
-                        League
-                    </th>
-                    <th>
-                        Average
-                    </th>
-                </tr>
-            </thead>
-            @if (((List<League>)ViewData["UsersLeagues"]).Count > 0)
-            {
-                <tbody>
-					@for (var i = 0; i < ((List<League>)ViewData["UsersLeagues"]).Count; i++)
-					{
-						<tr>
-							<td>@Html.DisplayFor(modelItem => ((List<League>)ViewData["UsersLeagues"])[i].Name)
-							</td>
-							<td>@Html.DisplayFor(modelItem => ((List<double>)ViewData["UsersLeaguesAverages"])[i])
-							</td>
-						</tr>
-					}
-@*
-                    @foreach (var ul in ((List<League>)ViewData["UsersLeagues"]))
-                    {
-                        
-                            <td>
-                                @Html.DisplayFor(modelItem => ul.Name)
-                            </td>
-                        </tr>
-                    }
-					@foreach (var ula in ((List<double>)ViewData["UsersLeaguesAverages"]))
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => ula)
-                            </td>
-                        </tr>
-                    }
-*@
-                </tbody>
-            }
-        </table>
-    </div>
-</div>
