series username showing up, changed home page text

--- a/BowlingCoreMVC/Views/Home/Index.cshtml
+++ b/BowlingCoreMVC/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
             @*<h3>Environment test:</h3>
             <h3>@ViewData["EnvironmentTest"]</h3>*@
             <div class="col-lg-8">
-                <h2 class="text-info">Hi there, welcome to BowlingHub</h2>
-                <p>Sign up for a free account today to start logging your bowling scores and compare them with your friends! You will be able to create leagues, log your series/games, see your statistics, and compete on the highscores! Click the Register button above to get started.</p>
+                <h2 class="text-info">Welcome to BowlingHub!</h2>
+                <p>BowlingHub is the place to log all of your bowling scores and view your progress. You will be able to create leagues, log your series/games, see your statistics, and compete on the highscores! Click the Register button above to get started.</p>
             </div>
             <div class="col-lg-2"></div>
         </div>
