--- a/BowlingCoreMVC/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/BowlingCoreMVC/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@page
+@model AccessDeniedModel
+@{
     ViewData["Title"] = "Access denied";
 }
 
 <header>
-    <h2 class="text-danger">@ViewData["Title"]</h2>
+    <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">You do not have access to this resource.</p>
 </header>
