--- a/BowlingCoreMVC/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/BowlingCoreMVC/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@page
+@model ConfirmEmailModel
+@{
     ViewData["Title"] = "Confirm email";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h1>@ViewData["Title"]</h1>
 <div>
     <p>
         Thank you for confirming your email.
