--- a/BowlingCoreMVC/Views/Shared/_LoginPartial.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_LoginPartial.cshtml
@@ -6,41 +6,26 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="form-inline">
-
-        
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello @UserManager.GetUserName(User)!</a>
-                <div class="dropdown-menu dropdown-menu-right">
-                @*
-                    <a asp-controller="Stats" asp-action="UserSummary" asp-route-id="@UserManager.GetUserId(User)" class="dropdown-item">Overall Stats</a>
-                    <div class="dropdown-divider"></div>
-                *@
-                    <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage" class="dropdown-item">Manage Account</a>
-                    <div class="dropdown-divider"></div>
-                    <a asp-area="" asp-controller="Account" asp-action="Logout" class="dropdown-item">Log out</a>
-                </div>
-            </li>
-        </ul>
-
-        @*<ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage" class="nav-link">Hello @UserManager.GetUserName(User)!</a>
-            </li>
-
-            <li class="nav-item justify-content-end"><a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">Need Help?</a></li>
-
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Account" asp-action="Logout" class="nav-link">Log out</a>
-            </li>
-        </ul>*@
-    </form>
+<form asp-area="Identity" asp-page="/Account/Logout"
+      asp-route-returnUrl="@Url.Page("/Index", new { area = "" })"
+      method="post"
+      id="logoutForm" class="navbar-right">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="nav-link">
+                Hello @UserManager.GetUserName(User)!
+            </a>
+        </li>
+        <li class="nav-item">
+            <button type="submit" class="btn btn-link navbar-btn nav-link">Logout</button>
+        </li>
+    </ul>
+</form>
 }
 else
 {
     <ul class="navbar-nav">
-        <li class="nav-item"><a asp-area="" asp-controller="Account" asp-action="Register" class="nav-link">Register</a></li>
-        <li class="nav-item"><a asp-area="" asp-controller="Account" asp-action="Login" class="nav-link">Log in</a></li>
+        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Register" class="nav-link">Register</a></li>
+        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Log in</a></li>
     </ul>
 }
