removed template stuff

--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -125,6 +125,7 @@
 
     @RenderSection("Scripts", required: false)
 
-    <partial name="_CookieConsentPartial" />
+    @* Cookies consent, eventually? *@
+    @*<partial name="_CookieConsentPartial" />*@
 </body>
 </html>
