--- a/BowlingCoreMVC/Views/Leagues/Create.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Create.cshtml
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <label asp-for="NewLocation" class="control-label"></label>
                 <input asp-for="NewLocation" class="" id="chkNewLocation" onchange="NewLocationCheckboxChanged(this);" />
-                
+
             </div>
 
             <div class="form-group" id="grpNewLocation">
@@ -48,6 +48,15 @@
                 <input asp-for="EndDate" class="form-control" asp-format="{0:MM/dd/yyyy}" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="LeagueDay" class="control-label"></label>
+                <select asp-for="LeagueDay" asp-items="@Model.Days" class="form-control" id="ddlDays">
+                    <option value="0">---Location---</option>
+                </select>
+                <span asp-validation-for="LocationID" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
