--- a/BowlingCoreMVC/Views/Series/Create.cshtml
+++ b/BowlingCoreMVC/Views/Series/Create.cshtml
@@ -1,13 +1,12 @@
 ﻿@model BowlingCoreMVC.Models.Series
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Series";
 }
 
-<h2>Create</h2>
-
-<h4>Series</h4>
+<h2>Create Series</h2>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
